# transac

./: .env.example  .gitignore  Cargo.toml  Dockerfile.backend  README.md  docker-compose-dev.yml  docker-compose.yml  env.example  store.md
.github/: frontend-ci.yaml
.github/workflows/: ci.yml  deploy.yml
docs/: BACKEND_POW_IMPLEMENTATION.md  DEPLOYMENT.md  MINIO_INTEGRATION.md  REGISTRATION_FLOW_REMOVAL.md  TRANSAC_POW_IMPLEMENTATION.md  arc42.md  device_certificate_logic.md
docs/documentation/: backend-api-endpoints.md  backend-product-management.md  frontend-architecture.md
docs/documentation/frontend-features/: cart.md  favorites.md  product-details.md  product-listing.md  (+1 more)
docs/tickets/: OFFLINE-FUNCTIONALITY.md
frontend/: .dockerignore  .gitignore  .prettierignore  Dockerfile.frontend  README.md  eslint.config.js  index.html  nginx.conf  nginx.ssl.template.conf  openapi.json  openapi_formatted.json  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.app.json  vite.config.base.ts  vite.config.ts  vitest.config.ts
frontend/public/: manifest.json  offline.html  sw-offline.js  sw.js
frontend/scripts/: create-png-icons.js  fetch_openapi.js  generate-icons.js  generate-pwa-icons.sh  generate_self_signed_cert.sh
frontend/src/: App.css  App.tsx  README.md  dummy.test.ts  i18n.ts  index.css  main.tsx  test-setup.ts  theme.ts
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20251015_152350_create_products_table.rs  m20251015_155300_create_users_table.rs  m20251016_120155_create_reviews_table.rs
migrations/: 001_create_stores_table.sql  002_create_products_table.sql  003_update_stores_table.sql  004_make_product_image_id_nullable.sql  005_fix_products_schema.sql  006_add_image_id_to_products.sql  007_ensure_image_id_exists.sql  008_fix_price_column_type.sql  20230913_create_device_cert_tables.sql
scripts/: README_MIGRATION.md  apply_image_id_migration.sh  request_certificate.sh  run_migrations.sh
src/: config.rs  context.rs  error.rs  lib.rs  main.rs  migrator.rs  openapi.rs  request_middleware.rs
src/api/: image_analysis.rs  media_storage.rs  mod.rs  pow.rs  products.rs  stores.rs
src/auth/: claims.rs  jwt_service.rs  mod.rs
src/crypto/: middleware.rs  mod.rs  pow.rs
src/db/: mod.rs  products.rs  reviews.rs  revocation.rs  stores.rs  users.rs
src/entity/: mod.rs  product.rs  review.rs  revocation.rs  store.rs  user.rs
src/events/: mod.rs
src/migrator/: m20230913_create_device_cert_tables.rs  mod.rs
tests/: healthz.rs  openap_spec.rs
(+121 files in other folders)
