[package]
name = "transac"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "2.0.0-rc.6", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite", "with-uuid", "with-chrono"] }
sea-orm-macros = "2.0.0-rc.6"
sea-orm-migration = { version = "2.0.0-rc.6", features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite", "with-uuid", "with-chrono"] }
sea-orm-codegen = "2.0.0-rc.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
tower-http = { version = "0.5", features = ["cors", "trace"] }
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22.1"
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
rand = "0.9.2"
sha2 = "0.10.9"
aws-config = "1.1.7"
aws-sdk-s3 = "1.17.0"
bytes = "1.5"
async-trait = "0.1"

[dev-dependencies]
