[package]
name = "transac"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1.1.17", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "with-uuid", "with-chrono"] }
sea-orm-macros = "1.1.17"
sea-orm-codegen = "1.1.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
jsonwebtoken = "9"
argon2 = "0.5"
time = "0.3"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22.1"
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
rand = "0.9.2"
sha2 = "0.10.9"
entity = "0.3.2"
aws-config = "1.1.7"
aws-sdk-s3 = "1.17.0"
aws-types = "1.3"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1.5"
async-trait = "0.1"
sea-orm-migration = "1.1.17"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
assert-json-diff = "2"
